src/film-database/features/menu/_fdMenu.scss
@use '/src/sass/functions' as f;
@use '/src/film-database/styles/scss/filmDatabaseStyles' as s;
@use '/src/film-database/styles/scss/filmDatabaseMixins' as m;

.fdMenu {
  position: fixed;
  z-index: 11;
  display: flex;
  gap: 48px;
  width: auto;
  will-change: width;
  height: 100%;
  padding: var(--fd-padding-generic) calc((var(--fd-padding-generic) / 3.5));
  transition: width ease-in-out 0.36ms;
  &::before {
    content: '';
    position: fixed;
    top: 0;
    left: 0;
    z-index: 9;
    height: 100svh;
    will-change: width;
    background: linear-gradient(to right, rgba(0, 0, 0, 1) 15%, rgba(0, 0, 0, 0.7) 100%);
  }
  &[data-modal='open'] {
    &::before {
      width: 100%;
    }
    .fdMenu__menu {
      opacity: 1;
    }
  }
  &[data-modal='closed'] {
    &::before {
      width: 5%;
    }
    .fdMenu__menu {
      opacity: 0;
    }
  }
}

.fdMenu__toolbar {
  flex: 0 1 auto;
  position: relative;
  z-index: 11;
  display: flex;
  align-items: center;
  width: fit-content;
  height: 100%;
  &__ul {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 6px;
    &__li {
      &--button {
        display: flex;
        justify-content: center;
        align-items: center;
        &--icon {
          & svg {
            color: white;
            width: 2em;
            height: 2em;
          }
        }
        &--key {
          @include m.fdFontL;
          color: white;
        }
      }
    }
  }
}

.fdMenu__menu {
  flex: 1 0 auto;
  position: relative;
  z-index: 11;
  display: flex;
  align-items: center;
  width: min-content;
  gap: 48px;
  scrollbar-width: none;
  & > * {
    height: inherit;
  }
  &__search {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }
  &__genres {
    &__nav {
      &--heading {
        @include m.fdFontL;
      }
      &__ul {
        overflow-y: scroll;
        scrollbar-width: none;
        &__li {
          &--button {
            @include m.fdFontL;
            white-space: nowrap;
          }
        }
      }
    }
  }
  &__search,
  &__genres {
    transition: opacity 0.35ms ease-in-out;
    &[data-menu='open'] {
      width: fit-content;
    }
    &[data-menu='closed'] {
      pointer-events: none;
      transform: translateX(-50%);
      opacity: 0;
    }
  }
}

//   &__tmdbCredit {
//     flex: 1 0 15%;
//     display: flex;
//     align-items: end;
//     max-width: 32ch;
//     &--p {
//       font-family: 'Satoshi-Regular';
//       font-size: f.rem(16);
//       letter-spacing: 0.03em;
//       line-height: normal;
//       color: white;
//       & a {
//         color: cyan;
//       }
//     }
//   }

